--- a/package.json
+++ b/package.json
@@ -6,27 +6,32 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "engines": {
-    "node": ">=14.15.0"
-  },
   "dependencies": {
-    "@middy/core": "^1.5.2",
-    "@middy/http-json-body-parser": "^1.5.2"
+    "@types/uuid": "^3.4.6",
+    "http-aws-es": "^6.0.0",
+    "jimp": "^0.16.1",
+    "jsonwebtoken": "^8.5.1",
+    "middy": "^0.25.0",
+    "source-map-support": "^0.5.11",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "@okta/okta-sdk-nodejs": "^5.0.0",
-    "@serverless/typescript": "^2.23.0",
-    "@types/aws-lambda": "^8.10.71",
-    "@types/node": "^14.14.25",
-    "aws-sdk": "^2.1013.0",
-    "json-schema-to-ts": "^1.5.0",
-    "serverless": "^2.23.0",
+    "@types/aws-lambda": "^8.10.17",
+    "@types/node": "^10.12.18",
+    "@types/serverless": "^1.72.5",
+    "aws-sdk": "^2.999.0",
+    "axios": "^0.21.4",
+    "fork-ts-checker-webpack-plugin": "^3.0.1",
+    "serverless-aws-documentation": "^1.1.0",
     "serverless-dynamodb-local": "^0.2.40",
-    "serverless-esbuild": "^1.17.1",
+    "serverless-iam-roles-per-function": "^3.2.0",
     "serverless-offline": "^8.2.0",
-    "serverless-webpack": "^5.5.5",
+    "serverless-prune-plugin": "^1.6.1",
+    "serverless-reqvalidator-plugin": "^2.0.0",
+    "serverless-webpack": "^5.2.0",
+    "ts-jest": "^27.0.7",
+    "ts-loader": "^5.3.3",
     "ts-node": "^8.10.2",
-    "tsconfig-paths": "^3.9.0",
     "typescript": "^3.2.4",
     "webpack": "^4.29.0",
     "webpack-node-externals": "^1.7.2"
